Implement basic functionalities and update gulpfile accordingly

--- a/src/popup.html
+++ b/src/popup.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pop-up</title>
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
-	<h1 id="title">Example.com</h1>
+	<h3>Tildes Extended</h3>
+	<div id="popup-content">
+		<p>Settings are under development</p>
+	</div>
 
-	<div id="display"></div>
-
-	<script src="scripts/file.js"></script>
-	<script src="scripts/main.js"></script>
+	<script src="scripts/popup.js"></script>
 </body>
 </html>
