Add feature: load custom css from URL
using CORS Anywhere for now, need to investigate if it's a big bad 'no no' as I'm afraid it is.

--- a/src/options.html
+++ b/src/options.html
@@ -47,6 +47,16 @@
 					<label for="jump_new_comment_enabled">Activate this feature</label>
 				</div>
 				<hr>
+				<h3>Use Custom Styles</h3>
+				<div>
+					<input type="checkbox" id="custom_styles_enabled">
+					<label for="custom_styles_enabled">Activate this feature</label>
+				</div>
+				<div>
+					<br><input type="url" id="custom_styles_url" value="" placeholder="https://something.com/stylesheet.css" size="55">
+					<span>Please consider that we've no control over the CSS you're loading</span>
+				</div>
+				<hr>
 				<div class="options-actions">
 					<button id="options_save" type="button"> Save </button>
 				</div>
