Add a <br> after CSS input

--- a/src/options.html
+++ b/src/options.html
@@ -53,7 +53,9 @@
 					<label for="custom_styles_enabled">Activate this feature</label>
 				</div>
 				<div>
-					<br><input type="url" id="custom_styles_url" value="" placeholder="https://something.com/stylesheet.css" size="55">
+					<br>
+					<input type="url" id="custom_styles_url" value="" placeholder="https://something.com/stylesheet.css" size="55">
+					<br>
 					<span>Please consider that we've no control over the CSS you're loading</span>
 				</div>
 				<hr>
