add charset to option page

--- a/src/options.html
+++ b/src/options.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta charset="utf-8"/>
 	<title>Tildes Extended Options</title>
 	<link rel="stylesheet" type="text/css" href="styles/options.css">
 </head>
