Add feature: live markdown preview

--- a/src/options.html
+++ b/src/options.html
@@ -48,6 +48,12 @@
 					<label for="jump_new_comment_enabled">Activate this feature</label>
 				</div>
 				<hr>
+				<h3>Markdown Preview</h3>
+				<div>
+					<input type="checkbox" id="markdown_preview_enabled">
+					<label for="markdown_preview_enabled">Activate this feature</label>
+				</div>
+				<hr>
 				<h3>Use Custom Styles</h3>
 				<div>
 					<input type="checkbox" id="custom_styles_enabled">
