Introduce the settings and basic files structure for users labels

--- a/src/options.html
+++ b/src/options.html
@@ -54,6 +54,12 @@
 					<label for="markdown_preview_enabled">Activate this feature</label>
 				</div>
 				<hr>
+				<h3>Users Label</h3>
+				<div>
+					<input type="checkbox" id="users_label_enabled">
+					<label for="users_label_enabled">Activate this feature</label>
+				</div>
+				<hr>
 				<h3>Use Custom Styles</h3>
 				<div>
 					<input type="checkbox" id="custom_styles_enabled">
