--- a/src/options.html
+++ b/src/options.html
@@ -71,8 +71,11 @@
 					<input type="checkbox" id="custom_styles_enabled">
 					<label for="custom_styles_enabled">Activate this feature</label>
 				</div>
-				<div id="custom_style_url_div" class="text-center">
-					<br><input class="mb-5" type="url" id="custom_styles_url" value="" placeholder="https://something.com/stylesheet.css" size="45">
+				<div id="custom_styles_urls_div" class="text-center">
+					<br><input class="mb-5" type="url" id="custom_styles_urls" value="" placeholder="https://example.com/styles.css, https://example.org/tildes.css" size="55">
+				</div>
+				<div class="text-center">
+					<br><textarea class="full-width mb-5" id="custom_styles_local" value="" placeholder="Enter any additional CSS here." rows="20">
 				</div>
 				<hr>
 				<div class="options-actions">
