Sticky header working version

--- a/src/options.html
+++ b/src/options.html
@@ -60,6 +60,12 @@
 					<label for="users_label_enabled">Activate this feature</label>
 				</div>
 				<hr>
+				<h3>Sticky Header</h3>
+				<div>
+					<input type="checkbox" id="sticky_header_enabled">
+					<label for="sticky_header_enabled">Activate this feature</label>
+				</div>
+				<hr>
 				<h3>Use Custom Styles</h3>
 				<div>
 					<input type="checkbox" id="custom_styles_enabled">
