Fix typos, streamline logic, working version synchronous saving
I don't really like using $.ajax synchronously as it locks the page but it makes for an easier code to read.

--- a/src/options.html
+++ b/src/options.html
@@ -72,10 +72,10 @@
 					<label for="custom_styles_enabled">Activate this feature</label>
 				</div>
 				<div id="custom_styles_urls_div" class="text-center">
-					<br><input class="mb-5" type="url" id="custom_styles_urls" value="" placeholder="https://example.com/styles.css, https://example.org/tildes.css" size="55">
+					<input class="full-width mb-5" type="url" id="custom_styles_urls" placeholder="https://example.net/styles-1.css, https://example.net/styles-2.css">
 				</div>
-				<div class="text-center">
-					<br><textarea class="full-width mb-5" id="custom_styles_local" value="" placeholder="Enter any additional CSS here." rows="20">
+				<div>
+					<textarea class="full-width mb-5" id="custom_styles_local" placeholder="Enter any additional CSS here." rows="5"></textarea>
 				</div>
 				<hr>
 				<div class="options-actions">
