Add Bootstrap and Popper.js Change --debug flag to --debug-scripts Update lockfile

--- a/src/options.html
+++ b/src/options.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Tildes Extended Options</title>
+	<link rel="stylesheet" type="text/css" href="styles/vendors/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles/options.css">
 </head>
 
@@ -86,6 +87,8 @@
 	</div>
 
 	<script src="scripts/vendors/jquery.min.js"></script>
+	<script src="scripts/vendors/popper.min.js"></script>
+	<script src="scripts/vendors/bootstrap.min.js"></script>
 	<script src="scripts/options.js"></script>
 </body>
 
