Rename options scss to options-old

--- a/src/options-old.html
+++ b/src/options-old.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Tildes Extended Options</title>
-	<link rel="stylesheet" type="text/css" href="styles/options.css">
+	<link rel="stylesheet" type="text/css" href="styles/options-old.css">
 </head>
 
 <body class="options-body">
