--- a/src/options.html
+++ b/src/options.html
@@ -5,23 +5,24 @@
 	<meta charset="utf-8" />
 	<title>Tildes Extended Options</title>
 	<link rel="stylesheet" type="text/css" href="styles/vendors/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles/options.css">
 </head>
 
 <body class="container">
 	<h2 class="my-4">Tildes Extended Settings</h2>
 	<div class="row">
 		<div class="col-4">
-			<ul class="list-group mb-2">
-				<li class="list-group-item active">Link In New Tab</li>
-				<li class="list-group-item">Jump To New Comment</li>
-				<li class="list-group-item">Markdown Preview</li>
-				<li class="list-group-item">Users Label</li>
-				<li class="list-group-item">Sticky Header</li>
-				<li class="list-group-item">Use Custom Styles</li>
+			<ul id="feature_list" class="list-group mb-2">
+				<li id="link_new_tab_list" class="list-group-item active">Link In New Tab</li>
+				<li id="jump_new_comment_list" class="list-group-item">Jump To New Comment</li>
+				<li id="markdown_preview_list" class="list-group-item">Markdown Preview</li>
+				<li id="users_label_list" class="list-group-item">Users Label</li>
+				<li id="sticky_header_list" class="list-group-item">Sticky Header</li>
+				<li id="custom_styles_list" class="list-group-item">Use Custom Styles</li>
 			</ul>
 			<button type="button" id="options_save" class="btn btn-primary btn-block">Save</button>
 		</div>
-		<div class="col-8">
+		<div id="features" class="col-8">
 			<div id="link_new_tab" class="selected">
 				<h4>Open links in a new tab</h4>
 				<div>
