Add popover to save button

--- a/src/options.html
+++ b/src/options.html
@@ -20,7 +20,9 @@
 				<li id="sticky_header_list" class="list-group-item">Sticky Header</li>
 				<li id="custom_styles_list" class="list-group-item">Use Custom Styles</li>
 			</ul>
-			<button type="button" id="options_save" class="btn btn-primary btn-block">Save</button>
+			<span id="options_save_popover" data-toggle="popover" data-placement="bottom">
+				<button type="button" id="options_save" class="btn btn-primary btn-block">Save</button>
+			</span>
 		</div>
 		<div id="features" class="col-8">
 			<div id="link_new_tab" class="selected">
