Integrates extended_css into the branch

--- a/src/options.html
+++ b/src/options.html
@@ -88,7 +88,10 @@
 					<label for="custom_styles_enabled">Activate this feature</label>
 				</div>
 				<div id="custom_style_url_div">
-					<input class="mb-2" type="url" id="custom_styles_url" value="" placeholder="https://something.com/stylesheet.css" size="45">
+					<textarea cols="50" rows="3" class="mb-2" id="custom_styles_urls" placeholder="https://something.com/stylesheet-1.css, https://something.com/stylesheet-1.css, ..."></textarea>
+				</div>
+				<div>
+					<textarea cols="50" rows="3" class="mb-2" id="custom_styles_local" placeholder="Enter any additional CSS here."></textarea>
 				</div>
 			</div>
 			<div class="options-notifications">
