Add checkmark in list for enabled features

--- a/src/options.html
+++ b/src/options.html
@@ -13,12 +13,30 @@
 	<div class="row">
 		<div class="col-4">
 			<ul id="feature_list" class="list-group mb-2">
-				<li id="link_new_tab_list" class="list-group-item active">Link In New Tab</li>
-				<li id="jump_new_comment_list" class="list-group-item">Jump To New Comment</li>
-				<li id="markdown_preview_list" class="list-group-item">Markdown Preview</li>
-				<li id="users_label_list" class="list-group-item">Users Label</li>
-				<li id="sticky_header_list" class="list-group-item">Sticky Header</li>
-				<li id="custom_styles_list" class="list-group-item">Use Custom Styles</li>
+				<li id="link_new_tab_list" class="list-group-item active d-flex justify-content-between align-items-center">
+					Link In New Tab
+					<span class="badge">&#x2713;</span>
+				</li>
+				<li id="jump_new_comment_list" class="list-group-item d-flex justify-content-between align-items-center">
+					Jump To New Comment
+					<span class="badge">&#x2713;</span>
+				</li>
+				<li id="markdown_preview_list" class="list-group-item d-flex justify-content-between align-items-center">
+					Markdown Preview
+					<span class="badge">&#x2713;</span>
+				</li>
+				<li id="users_label_list" class="list-group-item d-flex justify-content-between align-items-center">
+					Users Label
+					<span class="badge">&#x2713;</span>
+				</li>
+				<li id="sticky_header_list" class="list-group-item d-flex justify-content-between align-items-center">
+					Sticky Header
+					<span class="badge">&#x2713;</span>
+				</li>
+				<li id="custom_styles_list" class="list-group-item d-flex justify-content-between align-items-center">
+					Use Custom Styles
+					<span class="badge">&#x2713;</span>
+				</li>
 			</ul>
 			<span id="options_save_popover" data-toggle="popover" data-placement="bottom">
 				<button type="button" id="options_save" class="btn btn-primary btn-block">Save</button>
