Add Miscellaneous section, for random features Added Random Tilde color feature to Miscellaneous

--- a/src/options.html
+++ b/src/options.html
@@ -37,6 +37,9 @@
 					Use Custom Styles
 					<span class="badge">&#x2713;</span>
 				</li>
+				<li id="miscellaneous_features_list" class="list-group-item">
+					Miscellaneous
+				</li>
 			</ul>
 			<span id="options_save_popover" data-toggle="popover" data-placement="bottom">
 				<button type="button" id="options_save" class="btn btn-primary btn-block">Save</button>
@@ -110,6 +113,14 @@
 				</div>
 				<div>
 					<textarea cols="50" rows="3" class="mb-2" id="custom_styles_local" placeholder="Enter any additional CSS here."></textarea>
+				</div>
+			</div>
+			<div id="miscellaneous_features">
+				<h4>Miscellaneous features</h4>
+				<h5>Random Tilde logo color</h5>
+				<div>
+					<input type="checkbox" id="random_tilde_enabled">
+					<label for="random_tilde_enabled">Activate this feature</label>
 				</div>
 			</div>
 			<div class="options-notifications">
