--- a/src/options.html
+++ b/src/options.html
@@ -42,9 +42,9 @@
 					<span class="badge">&#x2713;</span>
 				</li>
 			</ul>
-			<span id="options_save_popover" data-toggle="popover" data-placement="bottom">
+			<div id="options_save_popover" data-toggle="popover" data-placement="bottom">
 				<button type="button" id="options_save" class="btn btn-primary btn-block">Save</button>
-			</span>
+			</div>
 		</div>
 		<div id="features" class="col-8">
 			<div id="link_new_tab" class="selected">
