--- a/src/options.html
+++ b/src/options.html
@@ -9,7 +9,11 @@
 </head>
 
 <body class="container">
-	<h2 class="my-4">Tildes Extended Settings</h2>
+	<div class="row">
+		<div class="col-12">
+			<h2 class="my-4">Tildes Extended Settings <span id="version"></span></h2>
+		</div>
+	</div>
 	<div class="row">
 		<div class="col-4">
 			<ul id="feature_list" class="list-group mb-2">
